# C__Primer_COPY

./: CMakeLists.txt
13/: Folder.cpp  Folder.h  FolderMain.cpp  HasPtrUseCount.cpp  HasPtrValueLike.cpp  StrFolder.cpp  StrFolder.h  StrVec.cpp  StrVec.h  String.cpp  String.h  copyNoMove.cpp  moveHP.cpp  serial.cpp  small_Sl.h
14/: Sales_data.cpp  Sales_data.h  absInt.cpp  add.cpp  calc.cpp  directcall.cpp  fcnobj.cpp  newcount-size.cpp  readStr.cpp
15/: Basked.cpp  Basket.h  Basket_main.cpp  Query.cpp  Query.h  QueryResult.h  Quote.cpp  Quote.h  TextQuery.cc  TextQuery.h  andQueryTest.cpp  and_orQueryTest.cpp  get_print.cpp  sample.cpp  scope.cpp  useQuote.cpp  vecBasket.cpp  virtualsNscope.cpp  wordQueryTest.cpp
